♻️ Add latest ref. Update date format.

--- a/cv.tex
+++ b/cv.tex
@@ -91,14 +91,16 @@
 \section{List of publications}
 \vspace{0.5em}
 % \cventry{years}{degree/job title}{institution/employer}{localization}{optional: grade/...}{optional: comment/job description}
-\cventry{18.08.2022}{\textnormal{Geiger, J., Sabadell-Rend{\'o}n, A., Daelman, N. \& L{\'o}pez, N. Data-driven models for ground and excited states for Single Atoms on Ceria. \textit{npj Comput. Mater.} \textbf{8}, 171 (2022).}}{}{}{}{}{}
+\cventry{02/03/2023}{\textnormal{Surin, I., Geiger, J. et al., Low‐Valent Manganese Atoms Stabilized on Ceria for Nitrous Oxide Synthesis. \textit{Adv. Mater.} \textbf{35}, 2211260 (2023).}}{}{}{}{}{}
 %
-\cventry{05.08.2022}{\textnormal{Geiger, J. \& L{\'o}pez, N. Coupling Metal and Support Redox Terms in Single-Atom Catalysts. \textit{J. Phys. Chem. C} \textbf{126}, 13698–13704 (2022).}}{}{}{}{}{}
+\cventry{18/08/2022}{\textnormal{Geiger, J., Sabadell-Rend{\'o}n, A., Daelman, N. \& L{\'o}pez, N. Data-driven models for ground and excited states for Single Atoms on Ceria. \textit{npj Comput. Mater.} \textbf{8}, 171 (2022).}}{}{}{}{}{}
 %
-\cventry{22.07.2022}{\textnormal{Geiger, J., Settels, V., Deglmann, P., Sch{\"a}fer, A. \& Bergeler, M. Automated input structure generation for single-ended reaction path optimizations. \textit{J. Comput. Chem.} \textbf{43}, 1662-1674 (2022).}}{}{}{}{}{}
+\cventry{05/08/2022}{\textnormal{Geiger, J. \& L{\'o}pez, N. Coupling Metal and Support Redox Terms in Single-Atom Catalysts. \textit{J. Phys. Chem. C} \textbf{126}, 13698–13704 (2022).}}{}{}{}{}{}
 %
-\cventry{04.03.2022}{\textnormal{Wan, W., Geiger, J., Berdunov, N., Luna, M. L., Chee, S. W., Daelman, N., L{\'o}pez, N., Shaikhutdinov, S. \& Cuenya, B. R. Highly Stable and Reactive Platinum Single Atoms on Oxygen Plasma-Functionalized CeO$_2$ Surfaces: Nanostructuring and Peroxo Effects. \textit{Angew. Chem. Int. Ed.} \textbf{61}, e202112640 (2022).}}{}{}{}{}{}
+\cventry{22/07/2022}{\textnormal{Geiger, J., Settels, V., Deglmann, P., Sch{\"a}fer, A. \& Bergeler, M. Automated input structure generation for single-ended reaction path optimizations. \textit{J. Comput. Chem.} \textbf{43}, 1662-1674 (2022).}}{}{}{}{}{}
 %
-\cventry{21.05.2020}{\textnormal{Geiger, J., Sprik, M. \& May, M. M. Band positions of anatase (001) and (101) surfaces in contact with water from density functional theory. \textit{J. Chem. Phys.} \textbf{152}, 194706 (2020).}}{}{}{}{}{}
+\cventry{04/03/2022}{\textnormal{Wan, W., Geiger, J. et al. Highly Stable and Reactive Platinum Single Atoms on Oxygen Plasma-Functionalized CeO$_2$ Surfaces: Nanostructuring and Peroxo Effects. \textit{Angew. Chem. Int. Ed.} \textbf{61}, e202112640 (2022).}}{}{}{}{}{}
+%
+\cventry{21/05/2020}{\textnormal{Geiger, J., Sprik, M. \& May, M. M. Band positions of anatase (001) and (101) surfaces in contact with water from density functional theory. \textit{J. Chem. Phys.} \textbf{152}, 194706 (2020).}}{}{}{}{}{}
 
 \end{document}
