--- a/literature.bib
+++ b/literature.bib
@@ -1,41 +1,50 @@
-@article{Shaikhutdinov2022, 
-    year = {2022}, 
-    title = {{Highly Stable and Reactive Platinum Single Atoms on Oxygen Plasma‐Functionalized CeO2 Surfaces: Nanostructuring and Peroxo Effects}}, 
-    author = {Wan, Weiming and Geiger, Julian and Berdunov, Nikolay and Luna, Mauricio Lopez and Chee, See Wee and Daelman, Nathan and López, Núria and Shaikhutdinov, Shamil and Cuenya, Beatriz Roldan}, 
-    journal = {Angewandte Chemie International Edition}, 
-    pages = {e202112640}, 
-    number = {20}, 
-    volume = {61}
+@article{Shaikhutdinov2022,
+  year    = {2022},
+  title   = {{Highly Stable and Reactive Platinum Single Atoms on Oxygen Plasma‐Functionalized CeO2 Surfaces: Nanostructuring and Peroxo Effects}},
+  author  = {Wan, Weiming and Geiger, Julian and Berdunov, Nikolay and Luna, Mauricio Lopez and Chee, See Wee and Daelman, Nathan and López, Núria and Shaikhutdinov, Shamil and Cuenya, Beatriz Roldan},
+  journal = {Angewandte Chemie International Edition},
+  pages   = {e202112640},
+  number  = {20},
+  volume  = {61}
 }
-@article{Geiger2022_npj, 
-    year = {2022}, 
-    title = {{Data-driven models for ground and excited states for Single Atoms on Ceria}}, 
-    author = {Geiger, Julian and Sabadell-Rendón, Albert and Daelman, Nathan and López, Núria}, 
-    journal = {npj Computational Materials}, 
-    pages = {171}, 
-    number = {1}, 
-    volume = {8}, 
+@article{Geiger2022_npj,
+  year    = {2022},
+  title   = {{Data-driven models for ground and excited states for Single Atoms on Ceria}},
+  author  = {Geiger, Julian and Sabadell-Rendón, Albert and Daelman, Nathan and López, Núria},
+  journal = {npj Computational Materials},
+  pages   = {171},
+  number  = {1},
+  volume  = {8}
 }
-@article{Geiger2022_jpcc, 
-    year = {2022}, 
-    keywords = {Ceria-SAC}, 
-    title = {{Coupling Metal and Support Redox Terms in Single-Atom Catalysts}}, 
-    author = {Geiger, Julian and López, Núria}, 
-    journal = {The Journal of Physical Chemistry C}, 
+@article{Geiger2022_jpcc,
+  year    = {2022},
+  title   = {{Coupling Metal and Support Redox Terms in Single-Atom Catalysts}},
+  author  = {Geiger, Julian and López, Núria},
+  journal = {The Journal of Physical Chemistry C}
 }
-@article{Geiger2020, 
-    year = {2020}, 
-    title = {{Band positions of anatase (001) and (101) surfaces in contact with water from density functional theory}}, 
-    author = {Geiger, Julian and Sprik, Michiel and May, Matthias M.}, 
-    journal = {The Journal of Chemical Physics}, 
-    pages = {194706}, 
-    number = {19}, 
-    volume = {152}, 
+@article{Geiger2020,
+  year    = {2020},
+  title   = {{Band positions of anatase (001) and (101) surfaces in contact with water from density functional theory}},
+  author  = {Geiger, Julian and Sprik, Michiel and May, Matthias M.},
+  journal = {The Journal of Chemical Physics},
+  pages   = {194706},
+  number  = {19},
+  volume  = {152}
 }
-@article{Geiger2022_jcc, 
-    year = {2022}, 
-    keywords = {BASF-Paper}, 
-    title = {{Automated input structure generation for single‐ended reaction path optimizations}}, 
-    author = {Geiger, Julian and Settels, Volker and Deglmann, Peter and Schäfer, Ansgar and Bergeler, Maike}, 
-    journal = {Journal of Computational Chemistry}, 
+@article{Geiger2022_jcc,
+  year    = {2022},
+  title   = {{Automated input structure generation for single‐ended reaction path optimizations}},
+  author  = {Geiger, Julian and Settels, Volker and Deglmann, Peter and Schäfer, Ansgar and Bergeler, Maike},
+  journal = {Journal of Computational Chemistry}
+}
+
+@article{Surin2023,
+  title   = {{Low‐Valent Manganese Atoms Stabilized on Ceria for Nitrous Oxide Synthesis}},
+  author  = {Surin, Ivan and Tang, Zhenchen and Geiger, Julian and Damir, Suyash and Eliasson, Henrik and Agrachev, Mikhail and Krumeich, Frank and Mitchell, Sharon and Kondratenko, Vita A. and Kondratenko, Evgenii V. and Jeschke, Gunnar and Erni, Rolf and López, Núria and Pérez‐Ramírez, Javier},
+  year    = {2023},
+  journal = {Advanced Materials},
+  doi     = {10.1002/adma.202211260},
+  issn    = {0935-9648},
+  pages   = {e2211260},
+  pmid    = {36863934}
 }
