--- a/cv.tex
+++ b/cv.tex
@@ -35,7 +35,9 @@
 
 % \email{jgeiger@iciq.es}
 % % todo: Add GH homepage
-% todo: Santiago: I think something is missing in this letter, you explain clearly in the second paragraph the tools you learnt but not the skills you got during your career path. Moreover, this is more subjective, I would sort the paragraphs differently, the last as the second, and more decided " I would be excited to contribute" ->" I want to contribute"
+% todo: What to fill the second page with? Do I need to fill it? References,
+% Soft Skills?,
+% todo: Crop image
 
 % Social icons
 % \renewcommand*{\homepage}[2]{\def\@homepage{#1}\def\@homepagetitle{#2}}
@@ -79,7 +81,7 @@
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
 \vspace{-4em}
-\section{General Information}
+\section{General}
 \vspace{0.5em}
 \cventry{Location}{\textnormal{43007 Tarragona, Spain}}{}{}{}{}
 \cventry{Birth}{\textnormal{Date: 30th November 1994. Location: 90471 Nuremberg}}{}{}{}{}
@@ -113,11 +115,11 @@
 
 \cventry{2015\,--\,2018}{\textnormal{Financial funding by the German government and the \textsc{Leonhard Kurz} Stiftung \& \textsc{Co Kg} through the German national scholarship program ``Germany Scholarship''.}}{}{}{}{}
 \cventry{08/16\,--\,10/16}{\textnormal{6-week inorganic chemistry internship at
-    the Texas-Tech-University, Lubbock, funded by the ``Research Internships in
-    Science and Engineering'' program of the German Academic Exchange Service
-    (\textsc{Daad Rise}). \textit{Micheal Findlater research group}. Synthesis of
-    Ir(I)\,--\,Pincer complexes and their usage as catalysts for the isomerization
-    of internal alkynes to allenes.}}{}{}{}{}
+        the Texas-Tech-University, Lubbock, funded by the ``Research Internships in
+        Science and Engineering'' program of the German Academic Exchange Service
+        (\textsc{Daad Rise}). \textit{Micheal Findlater research group}. Synthesis of
+        Ir(I)\,--\,Pincer complexes and their usage as catalysts for the isomerization
+        of internal alkynes to allenes.}}{}{}{}{}
 
 \vspace{0.5em}
 \section{Conferences}
@@ -125,7 +127,7 @@
 % Psi-K August 22–25, 2022
 % IUVSTA-ZCAM
 \cventry{03\,--\,07/07/2023}{\textnormal{IUVSTA-ZCAM: Metal-oxide ultrathin films and
-    nanostructures: Experiment meets theory - Poster contribution}}{}{}{}{}{}
+        nanostructures: Experiment meets theory - Poster contribution}}{}{}{}{}{}
 \cventry{22\,--\,25/08/2022}{\textnormal{Psi-K conference - Poster contribution}}{}{}{}{}{}
 
 \vspace{0.5em}
@@ -140,39 +142,39 @@
 \cventry{Graphic design}{\textnormal{Blender, Inkscape}}{}{}{}{}{}
 % \cventry{Misc}{\textnormal{\LaTeX,  AstroNvim}}{}{}{}{}{} % markdown
 \cventry{Tools I love}{\textnormal{VS Code, AstroNvim, git, fish, tmux,
-    VIM keybindings}}{}{}{}{}{}
+        VIM keybindings, Obsidian}}{}{}{}{}{}
 \cventry{Languages}{\textnormal{German (native), English (C2), Spanish
-    (B1)}}{}{}{}{}{}
+        (B1)}}{}{}{}{}{}
 
 \newpage
 \section{Open source}
+\vspace{0.5em}
 
-% LopezGroup-ICIQ github
-% AiiDA plugin for the Fish shell
-% `sklwrap`
 \cventry{\textnormal{\href{https://github.com/GeigerJ2/plugin-aiida}{\texttt{plugin-aiida}
-      \faIcon{github}}}}{}{\textnormal{AiiDA plugin for the Fish shell}}{}{}{}{}{}
+            \faIcon{github}}}}{}{\textnormal{AiiDA plugin for the Fish shell}}{}{}{}{}{}
 \cventry{\textnormal{\href{https://github.com/GeigerJ2/sklwrap}{\texttt{sklwrap}
-      \faIcon{github}}}}{}{\textnormal{Wrapper functions for easy use and
-    evaluation of sklearn predictors}}{}{}{}{}{}
+            \faIcon{github}}}}{}{\textnormal{Wrapper functions for easy use and
+        evaluation of sklearn predictors}}{}{}{}{}{}
 % Takes care of cross-validation, data standardization and visualization
 \cventry{\textnormal{\href{https://github.com/GeigerJ2/LopezGroup-ICIQ}{\texttt{LopezGroup}
-    \faIcon{github}}}}{}{\textnormal{Maintainer of the N\'{u}ria L\'{o}pez group
+        \faIcon{github}}}}{}{\textnormal{Maintainer of the N\'{u}ria L\'{o}pez group
 GitHub organization}}{}{}{}{}{}
 \cventry{\textnormal{\href{https://github.com/basf/precomplex_generator}{\texttt{precomp\_gen}
-      \faIcon{github}}}}{}{\textnormal{Precomplex generator: Tool for obtaining
-    suitable input structures for automated transition-state (TS) searches
-    with single-ended reaction path optimization algorithms (Master thesis
-    project - Daily use in an industrial setting since 2018).}}{}{}{}{}{}
+            \faIcon{github}}}}{}{\textnormal{Precomplex generator: Tool for obtaining
+        suitable input structures for automated transition-state (TS) searches
+        with single-ended reaction path optimization algorithms (Master thesis
+        project - Daily use in an industrial setting since 2018).}}{}{}{}{}{}
 
 
 \vspace{0.5em}
 \section{Workshops}
+\vspace{0.5em}
+
 \cventry{29/06/2022}{\textnormal{\href{https://www.youtube.com/watch?v=d5ELLGlftB0}{Introduction
-      to VS Code \faIcon{youtube}}}}{}{}{}{}{}
+            to VS Code \faIcon{youtube}}}}{}{}{}{}{}
 % https://github.com/GeigerJ2/vscode_seminar
 \cventry{21/04/2021}{\textnormal{\href{https://www.youtube.com/watch?v=A2swENqThIY}{Introduction to interactive visualization of
-      scientific data with Plotly \faIcon{youtube}}}}{}{}{}{}{}
+            scientific data with Plotly \faIcon{youtube}}}}{}{}{}{}{}
 % https://github.com/GeigerJ2/plotly_scientific_data
 
 % \cvlistitem{}
@@ -181,21 +183,21 @@ GitHub organization}}{}{}{}{}{}
 \vspace{0.5em}
 \section{Publications}
 \vspace{0.5em}
-% \cventry{years}{degree/job title}{institution/employer}{localization}{optional: grade/...}{optional: comment/job description}
-\cventry{02/03/2023}{\textnormal{Surin, I., Geiger, J. et al., Low‐Valent Manganese Atoms Stabilized on Ceria for Nitrous Oxide Synthesis. \textit{Adv. Mater.} \textbf{35}, 2211260 (2023).}}{}{}{}{}{}
+
+\cventry{02/03/2023}{\textnormal{Surin, I., \textbf{Geiger, J.} et al., Low‐Valent Manganese Atoms Stabilized on Ceria for Nitrous Oxide Synthesis. \textit{Adv. Mater.} \textbf{35}, 2211260 (2023).}}{}{}{}{}{}
 %
-\cventry{18/08/2022}{\textnormal{Geiger, J., Sabadell-Rend{\'o}n, A., Daelman, N. \& L{\'o}pez, N. Data-driven models for ground and excited states for Single Atoms on Ceria. \textit{npj Comput. Mater.} \textbf{8}, 171 (2022).}}{}{}{}{}{}
+\cventry{18/08/2022}{\textnormal{\textbf{Geiger, J.}, Sabadell-Rend{\'o}n, A., Daelman, N. \& L{\'o}pez, N. Data-driven models for ground and excited states for Single Atoms on Ceria. \textit{npj Comput. Mater.} \textbf{8}, 171 (2022).}}{}{}{}{}{}
 %
-\cventry{05/08/2022}{\textnormal{Geiger, J. \& L{\'o}pez, N. Coupling Metal and Support Redox Terms in Single-Atom Catalysts. \textit{J. Phys. Chem. C} \textbf{126}, 13698–13704 (2022).}}{}{}{}{}{}
+\cventry{05/08/2022}{\textnormal{\textbf{Geiger, J.} \& L{\'o}pez, N. Coupling Metal and Support Redox Terms in Single-Atom Catalysts. \textit{J. Phys. Chem. C} \textbf{126}, 13698–13704 (2022).}}{}{}{}{}{}
 %
-\cventry{22/07/2022}{\textnormal{Geiger, J., Settels, V., Deglmann, P., Sch{\"a}fer, A. \& Bergeler, M. Automated input structure generation for single-ended reaction path optimizations. \textit{J. Comput. Chem.} \textbf{43}, 1662-1674 (2022).}}{}{}{}{}{}
+\cventry{22/07/2022}{\textnormal{\textbf{Geiger, J.}, Settels, V., Deglmann, P., Sch{\"a}fer, A. \& Bergeler, M. Automated input structure generation for single-ended reaction path optimizations. \textit{J. Comput. Chem.} \textbf{43}, 1662-1674 (2022).}}{}{}{}{}{}
 %
-\cventry{04/03/2022}{\textnormal{Wan, W., Geiger, J. et al. Highly Stable and Reactive Platinum Single Atoms on Oxygen Plasma-Functionalized CeO$_2$ Surfaces: Nanostructuring and Peroxo Effects. \textit{Angew. Chem. Int. Ed.} \textbf{61}, e202112640 (2022).}}{}{}{}{}{}
+\cventry{04/03/2022}{\textnormal{Wan, W., \textbf{Geiger, J.} et al. Highly Stable and Reactive Platinum Single Atoms on Oxygen Plasma-Functionalized CeO$_2$ Surfaces: Nanostructuring and Peroxo Effects. \textit{Angew. Chem. Int. Ed.} \textbf{61}, e202112640 (2022).}}{}{}{}{}{}
 %
-\cventry{21/05/2020}{\textnormal{Geiger, J., Sprik, M. \& May, M. M. Band
-    positions of anatase (001) and (101) surfaces in contact with water from density
-    functional theory. \textit{J. Chem. Phys.} \textbf{152}, 194706
-    (2020).}}{}{}{}{}{}
+\cventry{21/05/2020}{\textnormal{\textbf{Geiger, J.}, Sprik, M. \& May, M. M. Band
+        positions of anatase (001) and (101) surfaces in contact with water from density
+        functional theory. \textit{J. Chem. Phys.} \textbf{152}, 194706
+        (2020).}}{}{}{}{}{}
 
 \newpage
 
