📝 Add soft skills and aiida-cattools.

--- a/cv.tex
+++ b/cv.tex
@@ -9,7 +9,7 @@
 \moderncvcolor{blue}
 \usepackage{pdfpages}
 \usepackage{xpatch}
-\setlength{\hintscolumnwidth}{80pt}
+\setlength{\hintscolumnwidth}{90pt}
 \firstname{Julian}
 \familyname{Geiger}
 \title{Curriculum Vitae}
@@ -19,7 +19,7 @@
 \firstname{Julian}
 \familyname{Geiger}
 \title{Curriculum Vitae}
-\photo[80pt][0pt]{appl_photo.png}
+\photo[90pt][0pt]{appl_photo_crop.png}
 \usepackage{lmodern}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -82,27 +82,25 @@
 %----------------------------------------------------------------------------------------
 \vspace{-4em}
 \section{General}
-\vspace{0.5em}
-\cventry{Location}{\textnormal{43007 Tarragona, Spain}}{}{}{}{}
-\cventry{Birth}{\textnormal{Date: 30th November 1994. Location: 90471 Nuremberg}}{}{}{}{}
+\cventry{Current Location}{\textnormal{43007 Tarragona, Spain}}{}{}{}{}
+\cventry{Birth}{\textnormal{Date: 30th November 1994, 90471 Nuremberg}}{}{}{}{}
 \cventry{Nationality}{\textnormal{German}}{}{}{}{}
 \cventry{E-Mail}{\textnormal{jgeiger@iciq.es}}{}{}{}{}
-\cventry{Phone}{\textnormal{(+34)\,611644538}}{}{}{}{}
+% \cventry{Phone}{\textnormal{(+34)\,611644538}}{}{}{}{}
 % \vspace{1em}
 
 \vspace{0.5em}
 \section{Education}
-\vspace{0.5em}
 % \cventry{years}{degree/job title}{institution/employer}{localization}{optional: grade/...}{optional: comment/job description}
 % \cventry{}{}{}{}{}{}
 %
 \cventry{10/19\,--\,present}{PhD Student}{N{\'u}ria L{\'o}pez research group}{Institute of Chemical Research of Catalonia}{}{}
 %
-\cventry{06/18\,--\,12/18}{Master's Thesis}{BASF, Ansgar Sch{\"a}fer research group (ROM/CQ)}{}{Grade: 1.0}{Structure generation for the automated investigation of reaction networks.}
+\cventry{06/18\,--\,12/18}{Master Thesis}{BASF, Ansgar Sch{\"a}fer research group (ROM/CQ)}{}{Grade: 1.0}{Structure generation for the automated investigation of reaction networks}
 %
 \cventry{10/16\,--\,12/18}{Chemistry M.Sc.}{Friedrich-Alexander-University Erlangen-Nuremberg}{}{Grade: 1.0}{}
 %
-\cventry{04/16\,--\,07/16}{Bachelor's thesis}{Andreas G{\"o}rling research group}{}{Grade: 1.0}{Density Functional Theory investigations on potential catalysts for CO$_2$ activation on the basis of Cu(I)--NHC complexes with \textsc{Turbomole}}
+\cventry{04/16\,--\,07/16}{Bachelor thesis}{Andreas G{\"o}rling research group}{}{Grade: 1.0}{Density Functional Theory investigations on potential catalysts for CO$_2$ activation on the basis of Cu(I)--NHC complexes with \textsc{Turbomole}}
 %
 \cventry{2013\,--\,2016}{Chemistry B.Sc.}{Friedrich-Alexander-University Erlangen-Nuremberg}{}{Grade: 1.2 (Valedictorian)}{}
 %
@@ -111,70 +109,74 @@
 
 \vspace{0.5em}
 \section{Scholarships}
-\vspace{0.5em}
 
-\cventry{2015\,--\,2018}{\textnormal{Financial funding by the German government and the \textsc{Leonhard Kurz} Stiftung \& \textsc{Co Kg} through the German national scholarship program ``Germany Scholarship''.}}{}{}{}{}
+\cventry{2015\,--\,2018}{\textnormal{Financial funding by the German government and the \textsc{Leonhard Kurz} Stiftung \& \textsc{Co Kg} through the German national scholarship program ``Germany Scholarship''}}{}{}{}{}
 \cventry{08/16\,--\,10/16}{\textnormal{6-week inorganic chemistry internship at
-        the Texas-Tech-University, Lubbock, funded by the ``Research Internships in
-        Science and Engineering'' program of the German Academic Exchange Service
-        (\textsc{Daad Rise}). \textit{Micheal Findlater research group}. Synthesis of
-        Ir(I)\,--\,Pincer complexes and their usage as catalysts for the isomerization
-        of internal alkynes to allenes.}}{}{}{}{}
+                the Texas-Tech-University, Lubbock (USA), funded by the ``Research Internships in
+                Science and Engineering'' program of the German Academic Exchange Service
+                (\textsc{Daad Rise}). \textit{Micheal Findlater research group}. Synthesis of
+                Ir(I)\,--\,Pincer complexes and their usage as catalysts for the isomerization
+                of internal alkynes to allenes}}{}{}{}{}
 
 \vspace{0.5em}
 \section{Conferences}
-\vspace{0.5em}
 % Psi-K August 22–25, 2022
 % IUVSTA-ZCAM
 \cventry{03\,--\,07/07/2023}{\textnormal{IUVSTA-ZCAM: Metal-oxide ultrathin films and
-        nanostructures: Experiment meets theory - Poster contribution}}{}{}{}{}{}
-\cventry{22\,--\,25/08/2022}{\textnormal{Psi-K conference - Poster contribution}}{}{}{}{}{}
+                nanostructures: Experiment meets theory (Poster contribution)}}{}{}{}{}{}
+\cventry{22\,--\,25/08/2022}{\textnormal{Psi-k conference (Poster contribution)}}{}{}{}{}{}
 
 \vspace{0.5em}
 \section{Skills}
-\vspace{0.5em}
 
 \cventry{DFT codes}{\textnormal{VASP, Quantum Espresso, CP2K, Turbomole}}{}{}{}{}{}
 \cventry{Programming}{\textnormal{Python, Shell scripting (bash, fish), Fortran}}{}{}{}{}{}
-\cventry{Libraries}{\textnormal{AiiDA, ASE, pymatgen, scikit-learn, pandas, Plotly}}{}{}{}{}{}
+\cventry{Libraries}{\textnormal{AiiDA, ASE, pymatgen, scikit-learn, pandas, plotly}}{}{}{}{}{}
 % \cventry{Dev tools}{\textnormal{Git, GitHub, VS Code}}{}{}{}{}{}
 % Docker, GitHub Actions, TeX,
 \cventry{Graphic design}{\textnormal{Blender, Inkscape}}{}{}{}{}{}
 % \cventry{Misc}{\textnormal{\LaTeX,  AstroNvim}}{}{}{}{}{} % markdown
-\cventry{Tools I love}{\textnormal{VS Code, AstroNvim, git, fish, tmux,
-        VIM keybindings, Obsidian}}{}{}{}{}{}
+\cventry{Tools I love}{\textnormal{VS Code, AstroNvim, git, fish shell, tmux,
+                VIM keybindings, Obsidian}}{}{}{}{}{}
+\cventry{Soft skills}{\textnormal{High degree of organization, driving
+                scientific projects from conception to completion, independent work,
+                effective communication in a team}}{}{}{}{}{}
 \cventry{Languages}{\textnormal{German (native), English (C2), Spanish
-        (B1)}}{}{}{}{}{}
+                (B1)}}{}{}{}{}{}
 
 \newpage
 \section{Open source}
-\vspace{0.5em}
 
+
+\cventry{\textnormal{\href{https://github.com/LopezGroup-ICIQ/aiida-cattools}{\texttt{aiida-cattools}
+                        \faIcon{github}}}}{}{\textnormal{Python utilities for
+                the adaptation
+                of AiiDA as a workflow engine in theoretical heterogeneous
+                catalysis}}{}{}{}{}{}
 \cventry{\textnormal{\href{https://github.com/GeigerJ2/plugin-aiida}{\texttt{plugin-aiida}
-            \faIcon{github}}}}{}{\textnormal{AiiDA plugin for the Fish shell}}{}{}{}{}{}
+                        \faIcon{github}}}}{}{\textnormal{AiiDA plugin for the fish shell}}{}{}{}{}{}
 \cventry{\textnormal{\href{https://github.com/GeigerJ2/sklwrap}{\texttt{sklwrap}
-            \faIcon{github}}}}{}{\textnormal{Wrapper functions for easy use and
-        evaluation of sklearn predictors}}{}{}{}{}{}
+                        \faIcon{github}}}}{}{\textnormal{Wrapper functions for easy use and
+                evaluation of sklearn predictors}}{}{}{}{}{}
 % Takes care of cross-validation, data standardization and visualization
-\cventry{\textnormal{\href{https://github.com/GeigerJ2/LopezGroup-ICIQ}{\texttt{LopezGroup}
-        \faIcon{github}}}}{}{\textnormal{Maintainer of the N\'{u}ria L\'{o}pez group
+\cventry{\textnormal{\href{https://github.com/LopezGroup-ICIQ}{\texttt{LopezGroup}
+                \faIcon{github}}}}{}{\textnormal{Maintainer of the N\'{u}ria L\'{o}pez group
 GitHub organization}}{}{}{}{}{}
 \cventry{\textnormal{\href{https://github.com/basf/precomplex_generator}{\texttt{precomp\_gen}
-            \faIcon{github}}}}{}{\textnormal{Precomplex generator: Tool for obtaining
-        suitable input structures for automated transition-state (TS) searches
-        with single-ended reaction path optimization algorithms (Master thesis
-        project - Daily use in an industrial setting since 2018).}}{}{}{}{}{}
+                        \faIcon{github}}}}{}{\textnormal{Precomplex generator: Tool for obtaining
+                suitable input structures for automated transition-state (TS) searches
+                with single-ended reaction path optimization algorithms (Master thesis
+                project - Code in daily use in an industrial setting since 2018)}}{}{}{}{}{}
 
 
 \vspace{0.5em}
 \section{Workshops}
-\vspace{0.5em}
 
 \cventry{29/06/2022}{\textnormal{\href{https://www.youtube.com/watch?v=d5ELLGlftB0}{Introduction
-            to VS Code \faIcon{youtube}}}}{}{}{}{}{}
+                        to VS Code \faIcon{youtube}}}}{}{}{}{}{}
 % https://github.com/GeigerJ2/vscode_seminar
 \cventry{21/04/2021}{\textnormal{\href{https://www.youtube.com/watch?v=A2swENqThIY}{Introduction to interactive visualization of
-            scientific data with Plotly \faIcon{youtube}}}}{}{}{}{}{}
+                        scientific data with Plotly \faIcon{youtube}}}}{}{}{}{}{}
 % https://github.com/GeigerJ2/plotly_scientific_data
 
 % \cvlistitem{}
@@ -182,7 +184,6 @@ GitHub organization}}{}{}{}{}{}
 
 \vspace{0.5em}
 \section{Publications}
-\vspace{0.5em}
 
 \cventry{02/03/2023}{\textnormal{Surin, I., \textbf{Geiger, J.} et al., Low‐Valent Manganese Atoms Stabilized on Ceria for Nitrous Oxide Synthesis. \textit{Adv. Mater.} \textbf{35}, 2211260 (2023).}}{}{}{}{}{}
 %
@@ -195,9 +196,9 @@ GitHub organization}}{}{}{}{}{}
 \cventry{04/03/2022}{\textnormal{Wan, W., \textbf{Geiger, J.} et al. Highly Stable and Reactive Platinum Single Atoms on Oxygen Plasma-Functionalized CeO$_2$ Surfaces: Nanostructuring and Peroxo Effects. \textit{Angew. Chem. Int. Ed.} \textbf{61}, e202112640 (2022).}}{}{}{}{}{}
 %
 \cventry{21/05/2020}{\textnormal{\textbf{Geiger, J.}, Sprik, M. \& May, M. M. Band
-        positions of anatase (001) and (101) surfaces in contact with water from density
-        functional theory. \textit{J. Chem. Phys.} \textbf{152}, 194706
-        (2020).}}{}{}{}{}{}
+                positions of anatase (001) and (101) surfaces in contact with water from density
+                functional theory. \textit{J. Chem. Phys.} \textbf{152}, 194706
+                (2020).}}{}{}{}{}{}
 
 \newpage
 
