--- a/cv.tex
+++ b/cv.tex
@@ -82,7 +82,7 @@
 %----------------------------------------------------------------------------------------
 \vspace{-4em}
 \section{General}
-\cventry{Current Location}{\textnormal{43007 Tarragona, Spain}}{}{}{}{}
+\cventry{Current Location}{\textnormal{Institute of Chemical Research of Catalonia (ICIQ), 43007 Tarragona, Spain}}{}{}{}{}
 \cventry{Birth}{\textnormal{Date: 30th November 1994, 90471 Nuremberg}}{}{}{}{}
 \cventry{Nationality}{\textnormal{German}}{}{}{}{}
 \cventry{E-Mail}{\textnormal{jgeiger@iciq.es}}{}{}{}{}
@@ -94,13 +94,25 @@
 % \cventry{years}{degree/job title}{institution/employer}{localization}{optional: grade/...}{optional: comment/job description}
 % \cventry{}{}{}{}{}{}
 %
-\cventry{10/19\,--\,present}{PhD Student}{N{\'u}ria L{\'o}pez research group}{Institute of Chemical Research of Catalonia}{}{}
+\cventry{10/19\,--\,present}{PhD Student}{ICIQ, N{\'u}ria L{\'o}pez research
+  group}{}{}{Investigations of ceria-based single-atom catalysts using Density
+  Functional Theory, high-throughput simulations and machine learning}
 %
-\cventry{06/18\,--\,12/18}{Master Thesis}{BASF, Ansgar Sch{\"a}fer research group (ROM/CQ)}{}{Grade: 1.0}{Structure generation for the automated investigation of reaction networks}
+\cventry{02/23\,--\,05/23}{Research internship}{EPFL, Nicola Marzari research group}{}{}{High-throughput study on the self-consistent evaluation of Hubbard U and V parameters of olivine and spinel Li-ion battery materials using Density-Functional Perturbation Theory}
+%
+%
+\cventry{06/18\,--\,12/18}{Master Thesis}{BASF, Ansgar Sch{\"a}fer research
+  group (ROM/CQ)}{}{Grade: 1.0}{Structure generation for the automated
+  investigation of reaction networks using single-ended reaction path optimization algorithms}
+%
+\cventry{10/17\,--\,03/18}{Erasmus semester}{University of Cambridge, Michiel Sprik research group}{}{}{Hybrid Density Functional Theory study on the band alignment of anatase surfaces in contact with water}
 %
 \cventry{10/16\,--\,12/18}{Chemistry M.Sc.}{Friedrich-Alexander-University Erlangen-Nuremberg}{}{Grade: 1.0}{}
 %
-\cventry{04/16\,--\,07/16}{Bachelor thesis}{Andreas G{\"o}rling research group}{}{Grade: 1.0}{Density Functional Theory investigations on potential catalysts for CO$_2$ activation on the basis of Cu(I)--NHC complexes with \textsc{Turbomole}}
+\cventry{04/16\,--\,07/16}{Bachelor thesis}{Friedrich-Alexander-University
+  Erlangen-Nuremberg, Andreas G{\"o}rling research group}{}{Grade: 1.0}{Density
+  Functional Theory investigations on potential catalysts for CO$_2$ activation on
+  the basis of Cu(I)--NHC complexes with \textsc{Turbomole}}
 %
 \cventry{2013\,--\,2016}{Chemistry B.Sc.}{Friedrich-Alexander-University Erlangen-Nuremberg}{}{Grade: 1.2 (Valedictorian)}{}
 %
@@ -112,18 +124,18 @@
 
 \cventry{2015\,--\,2018}{\textnormal{Financial funding by the German government and the \textsc{Leonhard Kurz} Stiftung \& \textsc{Co Kg} through the German national scholarship program ``Germany Scholarship''}}{}{}{}{}
 \cventry{08/16\,--\,10/16}{\textnormal{6-week inorganic chemistry internship at
-                the Texas-Tech-University, Lubbock (USA), funded by the ``Research Internships in
-                Science and Engineering'' program of the German Academic Exchange Service
-                (\textsc{Daad Rise}). \textit{Micheal Findlater research group}. Synthesis of
-                Ir(I)\,--\,Pincer complexes and their usage as catalysts for the isomerization
-                of internal alkynes to allenes}}{}{}{}{}
+    the Texas-Tech-University, Lubbock (USA), funded by the ``Research Internships in
+    Science and Engineering'' program of the German Academic Exchange Service
+    (\textsc{Daad Rise}). \textit{Micheal Findlater research group}. Synthesis of
+    Ir(I)\,--\,Pincer complexes and their usage as catalysts for the isomerization
+    of internal alkynes to allenes}}{}{}{}{}
 
 \vspace{0.5em}
 \section{Conferences}
 % Psi-K August 22–25, 2022
 % IUVSTA-ZCAM
 \cventry{03\,--\,07/07/2023}{\textnormal{IUVSTA-ZCAM: Metal-oxide ultrathin films and
-                nanostructures: Experiment meets theory (Poster contribution)}}{}{}{}{}{}
+    nanostructures: Experiment meets theory (Poster contribution)}}{}{}{}{}{}
 \cventry{22\,--\,25/08/2022}{\textnormal{Psi-k conference (Poster contribution)}}{}{}{}{}{}
 
 \vspace{0.5em}
@@ -137,46 +149,45 @@
 \cventry{Graphic design}{\textnormal{Blender, Inkscape}}{}{}{}{}{}
 % \cventry{Misc}{\textnormal{\LaTeX,  AstroNvim}}{}{}{}{}{} % markdown
 \cventry{Tools I love}{\textnormal{VS Code, AstroNvim, git, fish shell, tmux,
-                VIM keybindings, Obsidian}}{}{}{}{}{}
+    VIM keybindings, Obsidian}}{}{}{}{}{}
 \cventry{Soft skills}{\textnormal{High degree of organization, driving
-                scientific projects from conception to completion, independent work,
-                effective communication in a team}}{}{}{}{}{}
+    scientific projects from conception to completion, independent work,
+    effective communication in a team}}{}{}{}{}{}
 \cventry{Languages}{\textnormal{German (native), English (C2), Spanish
-                (B1)}}{}{}{}{}{}
+    (B1)}}{}{}{}{}{}
 
-\newpage
 \section{Open source}
 
 
 \cventry{\textnormal{\href{https://github.com/LopezGroup-ICIQ/aiida-cattools}{\texttt{aiida-cattools}
-                        \faIcon{github}}}}{}{\textnormal{Python utilities for
-                the adaptation
-                of AiiDA as a workflow engine in theoretical heterogeneous
-                catalysis}}{}{}{}{}{}
+      \faIcon{github}}}}{}{\textnormal{Python utilities for
+    the adaptation
+    of AiiDA as a workflow engine in theoretical heterogeneous
+    catalysis}}{}{}{}{}{}
 \cventry{\textnormal{\href{https://github.com/GeigerJ2/plugin-aiida}{\texttt{plugin-aiida}
-                        \faIcon{github}}}}{}{\textnormal{AiiDA plugin for the fish shell}}{}{}{}{}{}
+      \faIcon{github}}}}{}{\textnormal{AiiDA plugin for the fish shell}}{}{}{}{}{}
 \cventry{\textnormal{\href{https://github.com/GeigerJ2/sklwrap}{\texttt{sklwrap}
-                        \faIcon{github}}}}{}{\textnormal{Wrapper functions for easy use and
-                evaluation of sklearn predictors}}{}{}{}{}{}
+      \faIcon{github}}}}{}{\textnormal{Wrapper functions for easy use and
+    evaluation of sklearn predictors}}{}{}{}{}{}
 % Takes care of cross-validation, data standardization and visualization
 \cventry{\textnormal{\href{https://github.com/LopezGroup-ICIQ}{\texttt{LopezGroup}
-                \faIcon{github}}}}{}{\textnormal{Maintainer of the N\'{u}ria L\'{o}pez group
+    \faIcon{github}}}}{}{\textnormal{Maintainer of the N\'{u}ria L\'{o}pez group
 GitHub organization}}{}{}{}{}{}
 \cventry{\textnormal{\href{https://github.com/basf/precomplex_generator}{\texttt{precomp\_gen}
-                        \faIcon{github}}}}{}{\textnormal{Precomplex generator: Tool for obtaining
-                suitable input structures for automated transition-state (TS) searches
-                with single-ended reaction path optimization algorithms (Master thesis
-                project - Code in daily use in an industrial setting since 2018)}}{}{}{}{}{}
+      \faIcon{github}}}}{}{\textnormal{Precomplex generator: Tool for obtaining
+    suitable input structures for automated transition-state (TS) searches
+    with single-ended reaction path optimization algorithms (Master thesis
+    project - Code in daily use in an industrial setting since 2018)}}{}{}{}{}{}
 
 
 \vspace{0.5em}
-\section{Workshops}
+\section{Tutorials}
 
 \cventry{29/06/2022}{\textnormal{\href{https://www.youtube.com/watch?v=d5ELLGlftB0}{Introduction
-                        to VS Code \faIcon{youtube}}}}{}{}{}{}{}
+      to VS Code \faIcon{youtube}}}}{}{}{}{}{}
 % https://github.com/GeigerJ2/vscode_seminar
 \cventry{21/04/2021}{\textnormal{\href{https://www.youtube.com/watch?v=A2swENqThIY}{Introduction to interactive visualization of
-                        scientific data with Plotly \faIcon{youtube}}}}{}{}{}{}{}
+      scientific data with Plotly \faIcon{youtube}}}}{}{}{}{}{}
 % https://github.com/GeigerJ2/plotly_scientific_data
 
 % \cvlistitem{}
@@ -196,9 +207,9 @@ GitHub organization}}{}{}{}{}{}
 \cventry{04/03/2022}{\textnormal{Wan, W., \textbf{Geiger, J.} et al. Highly Stable and Reactive Platinum Single Atoms on Oxygen Plasma-Functionalized CeO$_2$ Surfaces: Nanostructuring and Peroxo Effects. \textit{Angew. Chem. Int. Ed.} \textbf{61}, e202112640 (2022).}}{}{}{}{}{}
 %
 \cventry{21/05/2020}{\textnormal{\textbf{Geiger, J.}, Sprik, M. \& May, M. M. Band
-                positions of anatase (001) and (101) surfaces in contact with water from density
-                functional theory. \textit{J. Chem. Phys.} \textbf{152}, 194706
-                (2020).}}{}{}{}{}{}
+    positions of anatase (001) and (101) surfaces in contact with water from density
+    functional theory. \textit{J. Chem. Phys.} \textbf{152}, 194706
+    (2020).}}{}{}{}{}{}
 
 \newpage
 
