📝 Introduced FAU abbreviation.

--- a/cv.tex
+++ b/cv.tex
@@ -107,14 +107,13 @@
 %
 \cventry{10/17\,--\,03/18}{Erasmus semester}{University of Cambridge, Michiel Sprik research group}{}{}{Hybrid Density Functional Theory study on the band alignment of anatase surfaces in contact with water}
 %
-\cventry{10/16\,--\,12/18}{Chemistry M.Sc.}{Friedrich-Alexander-University Erlangen-Nuremberg}{}{Grade: 1.0}{}
+\cventry{10/16\,--\,12/18}{Chemistry M.Sc.}{Friedrich-Alexander-University Erlangen-Nuremberg (FAU)}{}{Grade: 1.0}{}
 %
-\cventry{04/16\,--\,07/16}{Bachelor thesis}{Friedrich-Alexander-University
-  Erlangen-Nuremberg, Andreas G{\"o}rling research group}{}{Grade: 1.0}{Density
+\cventry{04/16\,--\,07/16}{Bachelor thesis}{FAU, Andreas G{\"o}rling research group}{}{Grade: 1.0}{Density
   Functional Theory investigations on potential catalysts for CO$_2$ activation on
   the basis of Cu(I)--NHC complexes with \textsc{Turbomole}}
 %
-\cventry{2013\,--\,2016}{Chemistry B.Sc.}{Friedrich-Alexander-University Erlangen-Nuremberg}{}{Grade: 1.2 (Valedictorian)}{}
+\cventry{2013\,--\,2016}{Chemistry B.Sc.}{FAU}{}{Grade: 1.2 (Valedictorian)}{}
 %
 \cventry{2005\,--\,2013}{A-levels}{Adam-Kraft-Gymnasium Schwabach}{}{Grade: 1.4}{}
 % \vspace{1em}
