🚀 Final version to be submitted.

--- a/cv.tex
+++ b/cv.tex
@@ -95,17 +95,17 @@
 % \cventry{}{}{}{}{}{}
 %
 \cventry{10/19\,--\,present}{PhD Student}{ICIQ, N{\'u}ria L{\'o}pez research
-  group}{}{}{Investigations of ceria-based single-atom catalysts using Density
+  group}{}{}{Fundamental studies on ceria-based single-atom catalysts using Density
   Functional Theory, high-throughput simulations and machine learning}
 %
-\cventry{02/23\,--\,05/23}{Research internship}{EPFL, Nicola Marzari research group}{}{}{High-throughput study on the self-consistent evaluation of Hubbard U and V parameters of olivine and spinel Li-ion battery materials using Density-Functional Perturbation Theory}
+\cventry{02/23\,--\,05/23}{Research internship}{EPFL, Nicola Marzari research group}{}{}{High-throughput study on the self-consistent evaluation of Hubbard U and V parameters of olivine and spinel Li-ion battery materials using Density Functional Perturbation Theory}
 %
 %
 \cventry{06/18\,--\,12/18}{Master Thesis}{BASF, Ansgar Sch{\"a}fer research
   group (ROM/CQ)}{}{Grade: 1.0}{Structure generation for the automated
   investigation of reaction networks using single-ended reaction path optimization algorithms}
 %
-\cventry{10/17\,--\,03/18}{Erasmus semester}{University of Cambridge, Michiel Sprik research group}{}{}{Hybrid Density Functional Theory study on the band alignment of anatase surfaces in contact with water}
+\cventry{10/17\,--\,03/18}{Erasmus semester}{University of Cambridge, Michiel Sprik research group}{}{}{Density Functional Theory study on the band alignment of anatase-TiO$_2$ surfaces in contact with water}
 %
 \cventry{10/16\,--\,12/18}{Chemistry M.Sc.}{Friedrich-Alexander-University Erlangen-Nuremberg (FAU)}{}{Grade: 1.0}{}
 %
@@ -125,9 +125,9 @@
 \cventry{08/16\,--\,10/16}{\textnormal{6-week inorganic chemistry internship at
     the Texas-Tech-University, Lubbock (USA), funded by the ``Research Internships in
     Science and Engineering'' program of the German Academic Exchange Service
-    (\textsc{Daad Rise}). \textit{Micheal Findlater research group}. Synthesis of
-    Ir(I)\,--\,Pincer complexes and their usage as catalysts for the isomerization
-    of internal alkynes to allenes}}{}{}{}{}
+    (\textsc{Daad Rise}). \textit{Michael Findlater research group}}}{}{}{}{Synthesis of
+  Ir(I)\,--\,Pincer complexes and their usage as catalysts for the isomerization
+  of internal alkynes to allenes}
 
 \vspace{0.5em}
 \section{Conferences}
@@ -138,6 +138,7 @@
 \cventry{22\,--\,25/08/2022}{\textnormal{Psi-k conference (Poster contribution)}}{}{}{}{}{}
 
 \vspace{0.5em}
+\newpage
 \section{Skills}
 
 \cventry{DFT codes}{\textnormal{VASP, Quantum Espresso, CP2K, Turbomole}}{}{}{}{}{}
